# cuckatoo-mining

./: Cargo.toml  README.md
cuckatoo-core/: Cargo.toml
cuckatoo-core/src/: bitmap.rs  bitmap_trimming.rs  blake2b.rs  constants.rs  cpp_cycle_finder.rs  cycle_verifier.rs  exact_siphash.rs  exact_trimming.rs  hash_cycle_finder.rs  hashing.rs  lib.rs  siphash.rs  timing.rs  trimming.rs  types.rs  verification.rs
cuckatoo-miner/: Cargo.toml
cuckatoo-miner/src/: main.rs
