[workspace]
resolver = "2"
members = [
    "cuckatoo-core",
    "cuckatoo-miner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cuckatoo Rust Team"]
description = "Rust implementation of Cuckatoo Reference Miner"
license = "MIT"
repository = "https://github.com/exmaple/cuckatoo-rust/miner"
